# Viessmann-decoder-library

./: .dockerignore  .gitignore  ARCHITECTURE.md  Addon_infos.txt  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MERGE_SUMMARY.md  MIGRATION.md  PROTOCOLS.md  README.md  RELEASE_NOTES_2.1.0.md  keywords.txt  library.properties  repository.json  repository.yaml
doc/: BUS_PARTICIPANT_DISCOVERY.md  CONTROL_COMMANDS.md  HARDWARE_SETUP.md  MQTT_SETUP.md  SCHEDULER_GUIDE.md  VITOTRONIC_200_KW1.md  WEBSERVER_SETUP.md
examples/Vitotronic200_KW1/: Vitotronic200_KW1.ino
examples/advanced_automation/: advanced_automation.ino
examples/control_commands/: control_commands.ino
examples/mqtt_integration/: mqtt_integration.ino
examples/vbusdecoder/: vbusdecoder.ino
examples/webserver_config/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  webserver_config.ino
examples/webserver_enhanced/: webserver_enhanced.ino
homeassistant-addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  SUMMARY.md  build.sh  config.json  run.sh
homeassistant-addon/webserver/: main.cpp
linux/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README_LINUX.md  SUMMARY.md  install.sh  quickstart.sh  viessmann.pc.in
linux/examples/: vbusdecoder_linux.cpp
linux/include/: Arduino.h  vbusdecoder.h
linux/src/: LinuxSerial.cpp  vbusdecoder.cpp
src/: VBUSDataLogger.cpp  VBUSMqttClient.cpp  VBUSMqttClient.h  VBUSScheduler.cpp  VBUSScheduler.h  vbusdecoder.cpp  vbusdecoder.h
viessmann-decoder/: .gitignore  ADDON_INFOS_COMPLIANCE.md  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CODE_REVIEW_RESULTS.md  DEVELOPMENT.md  Dockerfile  ICON_README.txt  INTEGRATION.md  README.md  REVIEW_README.md  SECURITY_SUMMARY.md  SOLUTION_SUMMARY.md  SUMMARY.md  apparmor.txt  build.json  build.sh  config.json  config.yaml  run.sh
viessmann-decoder/.validation/: README.md  verify_s6_config.sh
viessmann-decoder/linux/include/: LinuxSerial.h
viessmann-decoder/linux/src/: Arduino.cpp
viessmann-decoder/rootfs/etc/services.d/viessmann-decoder/: run
viessmann-decoder/src/: VBUSDataLogger.h  vbusdecoder.cpp
viessmann-decoder/webserver/: main.cpp
windows/: CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_REPORT.md  Makefile  QUICKSTART.md  README_WINDOWS.md  SUMMARY.md  build.bat  build_mingw.bat
windows/examples/: vbusdecoder_windows.cpp
windows/include/: Arduino.h  WindowsSerial.h  vbusdecoder.h
windows/src/: Arduino.cpp  WindowsSerial.cpp  vbusdecoder.cpp
